# core

./: .buckconfig  .clang-format  .gitattributes  .gitignore  .travis.yml  BUCK  CMakeLists.txt  License.rst  Readme.rst  algorithm.html  any.html  appveyor.yml  biicode.conf  buckaroo.json  buckaroo.lock.json  codecov.yml  expected.html  functional.html  genindex.html  ignore.bii  index.html  iterator.html  memory.html  numeric.html  objects.inv  optional.html  range.html  search.html  searchindex.js  string.html  type-traits.html  usage.html  utility.html  variant.html
_sources/: any.txt  functional.txt  index.txt  iterator.txt  memory.txt  optional.txt  type-traits.txt  usage.txt  utility.txt  variant.txt
_static/: cloud.css  cloud.js  searchtools.js
configure/: WIX.template.in  core-config.cmake.in
docs/: CMakeLists.txt  algorithm.rst  any.rst  array.rst  conf.py  expected.rst  functional.rst  index.rst  iterator.rst  memory.rst  meta.rst  numeric.rst  optional.rst  polymorphic.rst  propagate-const.rst  range.rst  string.rst  type-traits.rst  usage.rst  utility.rst  variant.rst
docs/static/: theme.css
docs/templates/: layout.html  navigation.html
include/core/: algorithm.hpp  any.hpp  array.hpp  deep.hpp  expected.hpp  functional.hpp  internal.hpp  iterator.hpp  memory.hpp  memory_resource.hpp  meta.hpp  numeric.hpp  optional.hpp  polymorphic.hpp  propagate_const.hpp  range.hpp  string.hpp  string_view.hpp  type_traits.hpp  typeinfo.hpp  utility.hpp  variant.hpp
package/: CMakeLists.txt  License.rtf  core-config.cmake.in  distribution.xml.in  pkg.json
scripts/: pkgbuild.py  travis-before-install  travis-before-install.py  travis-build  travis-configure  travis-install  travis-install.py  utility.py
scripts/python/: travis-before-install.py  travis-build.py  travis-configure.py  travis-failure.py  travis-install.py  utility.py
scripts/travis/: Copying.rst  build.py  install.py
tests/: BUCK  CMakeLists.txt  algorithm.cpp  any.cpp  array.cpp  catch.hpp  expected.cpp  functional.cpp  iterator.cpp  memory-resource.cpp  memory.cpp  numeric.cpp  optional.cpp  polymorphic.cpp  propagate-const.cpp  range.cpp  string-view.cpp  string.cpp  type-traits.cpp  utility.cpp  variant.cpp
